Reworked notes detail view

--- a/app/assets/stylesheets/_social.sass
+++ b/app/assets/stylesheets/_social.sass
@@ -607,6 +607,50 @@ body.transition .moment
   .moment-vid-text
     width: 465px
 
+  // !Note
+
+  .moment-no
+    padding: 10px 0 20px 25px
+
+    .moment-avatar,
+    .moment-no-text
+      display: none
+
+    .moment-no-note
+      margin-left: 0
+      margin-top: 0
+      background: none
+      border: 0
+      font-size: 15px
+
+    .moment-no-note-title
+      background: none
+      font:
+        weight: bold
+        size: 2em
+      padding: 7px 15px 8px 0
+      margin-bottom: 0
+      line-height: 1.3em
+      letter-spacing: -.02em
+
+    .moment-no-note-text
+      background: none
+      line-height: 1.36em
+      padding: 1px 15px 10px 0
+      margin-bottom: 0
+
+    .moment-content-actions
+      position: relative
+      top: auto
+      left: auto
+      margin: 5px 0 0
+
+    .moment-content-actions-edit
+      +border-radius(5px 0 0 5px)
+
+    .moment-content-actions-delete
+      +border-radius(0 5px 5px 0)
+
 // !Sidebar comment input
 
 .social-sidebar
