--- a/app/assets/stylesheets/mobile/_social.sass
+++ b/app/assets/stylesheets/mobile/_social.sass
@@ -260,6 +260,23 @@
   .moment-sys-text
     width: 70%
 
+  // !Note
+
+  .moment-no
+
+    .moment-no-note-title
+      line-height: 1em
+
+    .moment-no-note-text
+      background: none
+      line-height: 1.36em
+      padding: 1px 15px 10px 0
+      margin-bottom: 0
+
+    .moment-content-actions
+      right: auto
+
+
 // !Sidebar comment input
 
 .social-sidebar
