Consistent classes for highlight moment, and system moment actions update.

--- a/app/assets/stylesheets/_social.sass
+++ b/app/assets/stylesheets/_social.sass
@@ -271,6 +271,7 @@ body.transition .moment
     width: 48px
     +border-radius(48px)
 
+.moment-hi,
 .moment-bm,
 .moment-rp,
 .moment-grp,
@@ -289,6 +290,7 @@ body.transition .moment
 
 // !Bookmark, reading plan, download, and group moments -- they share the same layout
 
+.moment-hi-text,
 .moment-bm-text,
 .moment-rp-text,
 .moment-grp-text,
@@ -578,7 +580,7 @@ body.transition .moment
     width: 465px
 
   // !Bookmark, reading plan, download, and group moments -- they share the same layout
-
+  .moment-hi-text,
   .moment-bm-text,
   .moment-rp-text,
   .moment-grp-text,
