--- a/app/assets/stylesheets/mobile/_social.sass
+++ b/app/assets/stylesheets/mobile/_social.sass
@@ -133,7 +133,7 @@
 
 
 // !Bookmark, reading plan, download, and group moments -- they share the same layout
-
+.moment-hi-text,
 .moment-bm-text,
 .moment-rp-text,
 .moment-grp-text,
@@ -250,6 +250,7 @@
 
   // !Bookmark, reading plan, download, and group moments -- they share the same layout
 
+  .moment-hi-text,
   .moment-bm-text,
   .moment-rp-text,
   .moment-grp-text,
