--- a/app/views/moments/_highlight.html.haml
+++ b/app/views/moments/_highlight.html.haml
@@ -2,13 +2,12 @@
 - md_avatar = avatars.md_avatar
 
 .moment
-  -# !the content of the moment
   .moment-top
-    .moment-bm
+    .moment-hi
       = image_tag "social-cap-hi.png", class: "moment-img"
       %span.moment-avatar
         = image_tag md_avatar.url
-      %p.moment-bm-text
+      %p.moment-hi-text
         = link_to(moment.moment_title.html_safe, moment.to_path, class: "moment-title-link")
       - if moment.references.present?
         .moment-verse-wrap
