Updating moment avatar sizes for better retina support.

--- a/app/assets/stylesheets/mobile/_social.sass
+++ b/app/assets/stylesheets/mobile/_social.sass
@@ -124,7 +124,7 @@
   width: 80%
 
 .moment-comments-textarea
-  width: 80%
+  width: 80% !important
 
 // !Moment badge positioning
 
@@ -246,7 +246,7 @@
 
   .moment-comments-list-text,
   .moment-comments-textarea
-    width: 80%
+    width: 80% !important
 
   // !Bookmark, reading plan, download, and group moments -- they share the same layout
 
