--- a/app/assets/stylesheets/_social.sass
+++ b/app/assets/stylesheets/_social.sass
@@ -192,9 +192,10 @@ body.transition .moment
   background-color: #fff
 
   img
-    +border-radius(32px)
-    width: 32px
-    height: 32px
+    +border-radius(24px)
+    width: 24px
+    height: 24px
+    display: block
 
 // !Specific comments code
 
