--- a/app/views/moments/_bookmark.html.haml
+++ b/app/views/moments/_bookmark.html.haml
@@ -1,5 +1,5 @@
 - avatars = moment.avatars
-- md_avatar = avatars.md_avatar
+- avatar = avatars.lg_avatar
 
 .moment
   -# !the content of the moment
@@ -7,7 +7,7 @@
     .moment-bm
       = image_tag "social-cap-bm.png", class: "moment-img"
       %span.moment-avatar
-        = image_tag md_avatar.url
+        = image_tag avatar.url
       %p.moment-bm-text
         = link_to(moment.moment_title.html_safe, moment.to_path, class: "moment-title-link")
 
