--- a/app/views/moments/_highlight.html.haml
+++ b/app/views/moments/_highlight.html.haml
@@ -1,12 +1,12 @@
 - avatars = moment.avatars
-- md_avatar = avatars.md_avatar
+- avatar = avatars.lg_avatar
 
 .moment
   .moment-top
     .moment-hi
       = image_tag "social-cap-hi.png", class: "moment-img"
       %span.moment-avatar
-        = image_tag md_avatar.url
+        = image_tag avatar.url
       %p.moment-hi-text
         = link_to(moment.moment_title.html_safe, moment.to_path, class: "moment-title-link")
       - if moment.references.present?
