--- a/app/views/moments/_owner_actions.html.haml
+++ b/app/views/moments/_owner_actions.html.haml
@@ -2,6 +2,6 @@
 
   .moment-content-actions
     %a.moment-content-actions-edit{title: "Edit this {type}", href: "#"}
-      Edit this {type}
+      Edit
     %a.moment-content-actions-delete{title: "Delete this {type}", href: "#"}
-      Delete this {type}
+      Delete
