--- a/app/assets/stylesheets/mobile/_social.sass
+++ b/app/assets/stylesheets/mobile/_social.sass
@@ -32,21 +32,10 @@
 .moment-btm
 
 
-// !Edit / delete in a note
+// !Edit and delete controls
 
-.moment-no
-  .moment-content-actions
-    position: absolute
-    top: auto
-    bottom: 0
-    right: 8px
-    left: auto
-
-  .moment-content-actions-edit
-    +border-radius(5px 0 0 0)
-
-  .moment-content-actions-delete
-    +border-radius(0 5px 0 0)
+.moment-content-actions
+  margin: 4px 20px 0 0
 
 
 // !Share comment like etc.
@@ -60,31 +49,6 @@
 
 // !Stuff each moment action has in common
 
-.moment-actions-share,
-.moment-actions-comment,
-.moment-actions-like,
-.moment-actions-time
-  float: left
-  display: block
-  vertical-align: middle
-  font-size: 13px
-  width: 40px
-
-.moment-actions-share a:hover,
-.moment-actions-comment a:hover,
-.moment-actions-like a:hover
-  opacity: 0.6
-
-
-.moment-actions-share a,
-.moment-actions-comment a,
-.moment-actions-like a
-  background: image-url("social-actions-sprite.png") no-repeat
-  display: block
-  text-indent: 100%
-  white-space: nowrap
-  overflow: hidden
-  height: 36px
 
 // !Specific stuff for each action
 
@@ -92,7 +56,7 @@
   background-position: center 10px
 
 .moment-actions-comment a
-  background-position: center -129px
+  background-position: 9px -129px
 
 // !hide like action for now
 .moment-actions-like
