--- a/app/views/moments/_bookmark.html.haml
+++ b/app/views/moments/_bookmark.html.haml
@@ -8,6 +8,8 @@
       = image_tag "social-cap-bm.png", class: "moment-img"
       %span.moment-avatar
         = image_tag avatar.url
+      %span.moment-actions-time
+        = api_dt_time_ago(moment.created_dt)
       %p.moment-bm-text
         = link_to(moment.moment_title.html_safe, moment.to_path, class: "moment-title-link")
 
@@ -21,8 +23,6 @@
         %p.moment-bm-labels
           - moment.labels.each do |label|
             = link_to(label, bookmarks_user_path(@user, label: label.chomp),class: "moment-bm-labels-link")
-
-      = render partial: "moments/owner_actions", locals: {moment: moment}
 
   -# !share controls, dates, and comments
   .moment-btm
