--- a/app/views/moments/_daily_verse.html.haml
+++ b/app/views/moments/_daily_verse.html.haml
@@ -7,6 +7,8 @@
           22
         .moment-vod-calendar-img
           = image_tag "moment-vod-calendar-img.png"
+      %span.moment-actions-time
+        = api_dt_time_ago(moment.created_dt)
       .moment-vod-title
         Verse of the day
       %p.moment-vod-verse
