--- a/app/views/moments/_friendship.html.haml
+++ b/app/views/moments/_friendship.html.haml
@@ -10,6 +10,8 @@
       = image_tag "social-cap-fr.png", class: "moment-img"
       %span.moment-avatar
         = image_tag avatar.url
+      %span.moment-actions-time
+        = api_dt_time_ago(moment.created_dt)
       %p.moment-fr-text
         = moment.moment_title.html_safe
 
