--- a/app/views/moments/_note.html.haml
+++ b/app/views/moments/_note.html.haml
@@ -7,6 +7,8 @@
       = image_tag "social-cap-no.png", class: "moment-img"
       %span.moment-avatar
         = image_tag avatar.url
+      %span.moment-actions-time
+        = api_dt_time_ago(moment.created_dt)
       %p.moment-no-text
         = link_to(moment.moment_title.html_safe, moment.to_path, class: "moment-title-link")
       %span.moment-no-note
@@ -14,8 +16,6 @@
           = moment.title
         %p.moment-no-note-text
           = moment.content
-
-      = render partial: "moments/owner_actions", locals: {moment: moment}
 
   .moment-btm
     = render partial: "moments/actions_bar", locals: {moment: moment}
