Verse of day doesn't have timestamp.

--- a/app/assets/stylesheets/_social.sass
+++ b/app/assets/stylesheets/_social.sass
@@ -73,6 +73,9 @@ body.transition .moment
   margin-bottom: 1px
   padding-left: 7px
 
+  a
+    color: #aaa
+
 // !Stuff each moment action has in common
 
 .moment-actions-share,
