Only show moment cta for profile as others are irrelevant until you can find friends via web.

--- a/app/views/moments/index.html.haml
+++ b/app/views/moments/index.html.haml
@@ -3,9 +3,9 @@
 .social-feed-wrap
   .social-feed
     = render partial: "moments/daily_verse"
-    = render partial: "moments/cta/find_friends"
+    = #render partial: "moments/cta/find_friends"
     = render partial: "moments/cta/profile"
-    = render partial: "moments/cta/sharing"
+    = #render partial: "moments/cta/sharing"
     = render partial: "moments/cards", locals: {moments: @moments, comments_displayed: true}
 
 
