--- a/app/views/moments/cta/_profile.html.haml
+++ b/app/views/moments/cta/_profile.html.haml
@@ -2,4 +2,4 @@
   .moment-psa
     %p.moment-psa-text
       Help your friends find you.
-    <a href="#" class="moment-psa-btn action_button_blue">Update your profile</a>
+    = link_to( "Update your profile", edit_user_path(current_auth.user_id), class: "moment-psa-btn action_button_blue")
