Verse of day now displays date, update date span to appropriately named class for all moments.

--- a/app/assets/stylesheets/mobile/_social.sass
+++ b/app/assets/stylesheets/mobile/_social.sass
@@ -68,7 +68,7 @@
 .moment-actions-like a.liked
   background-position: center -82px
 
-.moment-actions-time
+.moment-time
   width: 48%
 
 // !Comments attached to a moment
