--- a/app/views/moments/_note.html.haml
+++ b/app/views/moments/_note.html.haml
@@ -7,7 +7,7 @@
       = image_tag "social-cap-no.png", class: "moment-img"
       %span.moment-avatar
         = image_tag avatar.url
-      %span.moment-actions-time
+      %span.moment-time
         = api_dt_time_ago(moment.created_dt)
       
       %h2.moment-no-text
