--- a/app/views/moments/_system.html.haml
+++ b/app/views/moments/_system.html.haml
@@ -4,7 +4,7 @@
     .moment-sys
       = image_tag "social-cap-sys.png", class: "moment-img"
       
-      %span.moment-actions-time
+      %span.moment-time
         = api_dt_time_ago(moment.created_dt)
 
       %h2.moment-sys-text
