--- a/app/views/notes/_list_item.html.haml
+++ b/app/views/notes/_list_item.html.haml
@@ -33,7 +33,7 @@
       %span.moment-actions-like
         <a href="#" title="Like this">Like</a>
 
-      %span.moment-actions-time
+      %span.moment-time
         = t('created ago', time_ago: time_ago_in_words(list_item.created_as_date))
 
       %span.moment-actions-authed
