--- a/app/views/pages/detail.html.haml
+++ b/app/views/pages/detail.html.haml
@@ -23,7 +23,7 @@
         %span.moment-actions-like
           <a href="#" title="Like this">Like</a>
 
-        %span.moment-actions-time
+        %span.moment-time
           12 days ago
 
       .moment-comments
