--- a/app/views/pages/feed.html.haml
+++ b/app/views/pages/feed.html.haml
@@ -50,7 +50,7 @@
         %span.moment-actions-comment
           <a href="#" title="Leave a comment about this">Comment</a>
 
-        %span.moment-actions-time
+        %span.moment-time
           12 days ago
 
       .moment-comments
