--- a/app/views/moments/_bookmark.html.haml
+++ b/app/views/moments/_bookmark.html.haml
@@ -8,7 +8,7 @@
       = image_tag "social-cap-bm.png", class: "moment-img"
       %span.moment-avatar
         = image_tag avatar.url
-      %span.moment-actions-time
+      %span.moment-time
         = api_dt_time_ago(moment.created_dt)
       
       %h2.moment-bm-text
