--- a/app/views/moments/_friendship.html.haml
+++ b/app/views/moments/_friendship.html.haml
@@ -10,7 +10,7 @@
       = image_tag "social-cap-fr.png", class: "moment-img"
       %span.moment-avatar
         = image_tag avatar.url
-      %span.moment-actions-time
+      %span.moment-time
         = api_dt_time_ago(moment.created_dt)
       
       %h2.moment-fr-text
