--- a/app/views/moments/index.html.haml
+++ b/app/views/moments/index.html.haml
@@ -4,7 +4,7 @@
   .social-feed
     = render partial: "moments/daily_verse"
     = #render partial: "moments/cta/find_friends"
-    = render partial: "moments/cta/profile"
+    = render partial: "moments/cta/profile" if current_user.profile_incomplete?
     = #render partial: "moments/cta/sharing"
     = render partial: "moments/cards", locals: {moments: @moments, comments_displayed: true}
 
