Styled load more boxy box

--- a/app/assets/stylesheets/_social.sass
+++ b/app/assets/stylesheets/_social.sass
@@ -21,6 +21,14 @@
 
 // !-------------------- Feed -------------------------
 
+#load-more
+  display: block
+  text-align: center
+  padding: 4px 10px
+  background-color: #fff
+  +border-radius(5px)
+
+
 // !Moment containers
 body.transition .moment
   -webkit-transition: all 0.3s ease-out
