--- a/app/assets/stylesheets/_social.sass
+++ b/app/assets/stylesheets/_social.sass
@@ -342,7 +342,7 @@ body.transition .moment
 // !Verse of the day moment
 
 .moment-vod
-  overflow: hidden
+  background: #fff image-url("social-cap-vod.png") no-repeat top right
 
 .moment-vod .moment-time
   padding-top: 8px
@@ -411,6 +411,7 @@ body.transition .moment
 
 .moment-no
   padding-bottom: 0
+  background: #fff image-url("social-cap-no.png") no-repeat top right
 
 .moment-no-note
   clear: both
@@ -438,6 +439,9 @@ body.transition .moment
 
 
 // !Video moment
+
+.moment-vid
+  background: #fff image-url("social-cap-vid.png") no-repeat top right
 
 .moment-vid-info
   display: block
@@ -467,6 +471,9 @@ body.transition .moment
 
 // !Badge moment
 
+.moment-bdg
+  background: #fff image-url("social-cap-bdg.png") no-repeat top right
+
 .moment-bdg-info
   display: block
   overflow: hidden
@@ -486,6 +493,9 @@ body.transition .moment
   font-weight: bold
 
 // !Friends moment
+
+.moment-fr
+  background: #fff image-url("social-cap-fr.png") no-repeat top right
 
 .moment-fr-container
   position: relative
@@ -521,6 +531,42 @@ body.transition .moment
 .moment-fr-seemore
   display: block
   text-align: center
+
+
+// !Bookmark moment
+
+.moment-bm
+  background: #fff image-url("social-cap-bm.png") no-repeat top right
+
+
+// !Highlight moment
+
+.moment-hi
+  background: #fff image-url("social-cap-hi.png") no-repeat top right
+
+
+// !Reading plan moment
+
+.moment-rp
+  background: #fff image-url("social-cap-rp.png") no-repeat top right
+
+
+// !Group moment
+
+.moment-grp
+  background: #fff image-url("social-cap-grp.png") no-repeat top right
+
+
+// !Download moment
+
+.moment-dl
+  background: #fff image-url("social-cap-dl.png") no-repeat top right
+
+
+// !System moment
+
+.moment-sys
+  background: #fff image-url("social-cap-sys.png") no-repeat top right
 
 
 // !PSA moment
