Changed comment text to blue and edit/del to grey in moment bottom

--- a/app/assets/stylesheets/_social.sass
+++ b/app/assets/stylesheets/_social.sass
@@ -56,6 +56,7 @@ body.transition .moment
 .moment-content-actions-delete
   padding: 0 0 1px 20px
   font-size: 13px
+  color: #888
 
 .moment-content-actions-edit
   background: image-url("edit-delete-sprite.png") no-repeat 1px 0
@@ -81,8 +82,6 @@ body.transition .moment
   margin-bottom: 1px
   padding-left: 7px
 
-  a
-    color: #aaa
 
 // !Stuff each moment action has in common
 
