--- a/app/assets/stylesheets/_notifications.sass
+++ b/app/assets/stylesheets/_notifications.sass
@@ -22,19 +22,6 @@
 
 // ----------Notifications page
 
-.notifications
-
-  .activity-date
-    font-size: 1em !important
-    font-weight: bold
-    margin-bottom: 5px
-    padding-bottom: 5px
-
-  .activity-timestamp
-    display: block
-    color: #aaa
-    font-size: 12px
-
 .notifications-list
   border-top: 1px solid #ccc
 
@@ -44,6 +31,10 @@
     margin-bottom: 0
     line-height: 1.4em
     border-bottom: 1px solid #ddd
+
+.notifications-empty
+  p
+    text-align: center
 
 article.social-requests ul
   margin-bottom: 0    
