--- a/app/views/users/friends.html.haml
+++ b/app/views/users/friends.html.haml
@@ -9,14 +9,16 @@
 
     .friends-count
       %p.friends-count-have
-        You have 42 friends
+        = "You have #{@friends.count} friends"
       %span.friends-count-canhave
         You can have as many as 150
       %span.friends-count-help
         Too many friends is bad for your health. Show some restraint, man!
 
-      %a{href: "#", class: "friends-count-find action_button_blue"}
-        Find friends
+      - # Web doesn't have a way to find friends at the moment
+      - # apps only support uploading contact lists.
+      - #%a{href: "#", class: "friends-count-find action_button_blue"} Find friends
+        
 
   -# Friend list
 
