--- a/app/views/shared/header/_requests.html.haml
+++ b/app/views/shared/header/_requests.html.haml
@@ -40,6 +40,10 @@
           </div>
         </div>
       </li>
+      {{else}}
+      <li class="list-item">
+        <p>You don't have any friend requests</p>
+      </li>
       {{/each}}
     </ul>
     <div class="view-all">
